syntax = "proto3";

service ChatService {
  rpc JoinRoom (JoinRoomRequest) returns (stream ChatMessage);
  rpc SendMessage (ChatMessage) returns (SendResponse);
  rpc LeaveRoom (LeaveRequest) returns (LeaveResponse);
  rpc SendDirectMessage (DirectMessage) returns (SendResponse);
  rpc SubscribeToDMs (SubscribeRequest) returns (stream DirectMessage);
}

message JoinRoomRequest {
  string username = 1;
  string roomName = 2;
}

message ChatMessage {
  string username = 1;
  string roomName = 2;
  string content = 3;
}

message SendResponse {
  bool success = 1;
  string error = 2;
}

message LeaveRequest {
  string username = 1;
  string roomName = 2;
}

message LeaveResponse {
  bool success = 1;
  string error = 2;
}

message DirectMessage {
  string fromUser = 1;
  string toUser = 2;
  string content = 3;
}

message SubscribeRequest {
  string username = 1;
}